tests/render_snapshots/snapshots/render_snapshots__inspector__inspector_info_tab_shows_owner_and_comment.snap
---
source: tests/render_snapshots/inspector.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                       
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│> public.users    │┌ [2] Inspector ───────────────────────────────────────────┐
│  public.posts    ││Owner:   postgres                                         │
│  public.comments ││Comment: User accounts                                    │
│                  ││Rows:    ~100                                             │
│                  ││Schema:  public                                           │
│                  ││Table:   users                                            │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  │└──────────────────────────────────────────────────────────┘
│                  │┌ [3] Result ──────────────────────────────────────────────┐
│                  ││(select a table to preview)                               │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
r:Reload  s:SQL  e:ER Diagram  p:Tables  ^O:History  ^R:Read-Only  f:Focus  Tab/
